# disco-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  ENGINEERING_SPEC.md  NOTICE  README.md  config.toml  pyproject.toml
.claude/: settings.json
.claude/commands/: sync-spec.md  test-chapter.md
.claude/rules/: extensions.md  grpc-promise-streams.md  spec.md  testing.md  transport.md  worker.md
.codex/: AGENTS.md
.github/workflows/: build-windows.yml  build.yml  release-build.yml  release-publish.yml  test.yml
cmake/: extension_helpers.cmake
docs/: simulation_engine.rst
examples/my-model/: pyproject.toml
examples/my-model/src/my_model_pkg/: model.yml  orm.py
examples/my-model/src/my_model_pkg/nodes/: stockingpoint.py
examples/my-model/tests/: conftest.py  my-model.db  test_my_model.py
sample/my-model/: pyproject.toml
sample/my-model/src/my_model_pkg/: model.yml  orm.py  plugin.py  sampling.py
sample/my-model/src/my_model_pkg/nodes/: __init__.py  stockingpoint.py
sample/my-model/tests/: config.toml  my-model.db  test_my_model.py
src/disco/: __init__.py  __main__.py  client.py  cluster.py  config.py  config.toml  database.py  envelopes.py  exceptions.py  graph_data.py  graph_factory.py  node.py  orchestrator.py  partitioner.py  partitioning.py  router.py  runtime.py  server.py  simproc.py  testrun.py  worker.py
src/disco/cli/: __init__.py  argparse_model.py  commands.py  server.py
src/disco/event_queue/: CMakeLists.txt  EventQueue.cpp  EventQueue.h  PredecessorEventQueue.cpp  PredecessorEventQueue.h  __init__.py  _core.cpp  _core.pyi
src/disco/experiments/: __init__.py  experiment.py  store.py
src/disco/graph/: __init__.py  core.py  db.py  extract.py  graph_mask.py  labels.py  schema.py
src/disco/helpers/: __init__.py  gb.py
src/disco/metastore/: __init__.py  helpers.py  leader.py  store.py
src/disco/model/: __init__.py  loader.py  orm.py  spec.py
src/disco/partitioner/: __init__.py  _helpers.py  _protocol.py  _simple.py  _spectral.py
src/disco/transports/: __init__.py  base.py  grpc_ingress.py  grpc_transport.py  inprocess.py  ipc_egress.py  ipc_messages.py  ipc_receiver.py
src/disco/transports/proto/: __init__.py  transport.proto  transport_pb2.py  transport_pb2.pyi  transport_pb2_grpc.py
tests/: conftest.py  test_client.py  test_cluster.py  test_event_queue.py  test_exceptions.py  test_experiments.py  test_graph_factory.py  test_grpc_transport.py  test_ipc_transport.py  test_orchestrator.py  test_partitioner.py  test_partitioning.py  test_routing.py  test_runtime.py  test_server.py  test_simproc.py  test_testrun.py  test_worker.py
tests/cli/: test_argparse_model.py  test_cli_entrypoints.py
tests/graph/: test_datetime_compat.py  test_db.py  test_distinct_labels.py  test_extract.py  test_graph_basic.py  test_graph_factory.py  test_supergraph.py  test_vertex_weight.py
tests/metastore/: test_connection_manager.py  test_leader.py  test_metastore.py
tests/model/: test_loader.py  test_orm.py  test_spec.py
tests/partitioner/: test_simple_partitioner.py  test_spectral_partitioner.py
